SERVER-22862 Fix deadlock between ShardRegistry and ReplicaSetMonitor

(cherry picked from commit bbfd2e1c9884e13aa0203cc1887d956fbb486c6b)