src/mongo/s/client/shard_registry.h
@@ -103,12 +103,6 @@ public:
     ~ShardRegistry();
 
     /**
-     * Invoked when the connection string for the config server changes. Updates the config server
-     * connection string and recreates the config server's shard.
-     */
-    void updateConfigServerConnectionString(ConnectionString configServerCS);
-
-    /**
      * Invokes the executor's startup method, which will start any networking/async execution
      * threads.
      */
@@ -146,6 +140,12 @@ public:
     bool reload(OperationContext* txn);
 
     /**
+     * Invoked when the connection string for the config server changes. Updates the config server
+     * connection string and recreates the config server's shard.
+     */
+    void updateConfigServerConnectionString(ConnectionString configServerCS);
+
+    /**
      * Throws out and reconstructs the config shard.  This has the effect that if replica set
      * monitoring of the config server replica set has stopped (because the set was down for too
      * long), this will cause the ReplicaSetMonitor to be rebuilt, which will re-trigger monitoring
@@ -154,14 +154,11 @@ public:
     void rebuildConfigShard();
 
     /**
-     * Updates _lookup and _rsLookup based on the given new version of the given Shard's
-     * ConnectionString. If ConnectionString is not specified the maps are updated with hosts
-     * from the ReplicaSetMonitor.
-     * Used to update the ShardRegistry when a change in replica set membership is detected by the
-     * ReplicaSetMonitor.
+     * Takes a connection string describing either a shard or config server replica set, looks
+     * up the corresponding Shard object based on the replica set name, then updates the
+     * ShardRegistry's notion of what hosts make up that shard.
      */
-    void updateLookupMapsForShard(std::shared_ptr<Shard> shard,
-                                  boost::optional<const ConnectionString&> newConnString);
+    void updateReplSetHosts(const ConnectionString& newConnString);
 
     /**
      * Returns a shared pointer to the shard object with the given shard id.
@@ -358,17 +355,19 @@ private:
     /**
      * Creates a shard based on the specified information and puts it into the lookup maps.
      */
-    void _addShard_inlock(const ShardType& shardType, bool passHostName);
+    void _addShard_inlock(const ShardId& shardId,
+                          const ConnectionString& connString,
+                          std::unique_ptr<RemoteCommandTargeter> targeter);
 
     /**
      * Adds the "config" shard (representing the config server) to the shard registry.
      */
     void _addConfigShard_inlock();
 
-    void _updateLookupMapsForShard_inlock(std::shared_ptr<Shard> shard,
-                                          boost::optional<const ConnectionString&> newConnString);
+    void _updateConfigServerConnectionString_inlock(ConnectionString configServerCS);
 
     std::shared_ptr<Shard> _findUsingLookUp(const ShardId& shardId);
+    std::shared_ptr<Shard> _findUsingLookUp_inlock(const ShardId& shardId);
 
     /**
      * Runs a command against the specified host, checks the returned reply (if any) for
@@ -405,7 +404,8 @@ private:
                                                        const BSONObj& metadata,
                                                        const ErrorCodesSet& errorsToCheck);
 
-    // Factory to obtain remote command targeters for shards
+    // Factory to obtain remote command targeters for shards.  Never changed after startup so safe
+    // to access outside of _mutex.
     const std::unique_ptr<RemoteCommandTargeterFactory> _targeterFactory;
 
     // Executor pool for scheduling work and remote commands to shards and config servers. Each
